DNAnexus Upload Agent 1.4.1 <support@dnanexus.com>, 2013-Jul-8
--------------------------------------------------------------
  * A speculative fix for PTFM-8366 (reincarnation of PTFM-7251).
    We now ignore SIGPIPE at dxcpp init time (and never reset it
    until the process terminates).
  * A fix for "LC_ALL" issue which resurfaced in v1.4.0 (due to changes
    made for PTFM-8385)
  * Extraction of hostname is better now (deals with port info in url),
    also we identify ip addresses and do not resolve them explicitly (PTFM-8427)

DNAnexus Upload Agent 1.4.0 <support@dnanexus.com>, 2013-Jul-1
--------------------------------------------------------------
  * UA should now use full file path for creating the file signature
    (which in turn is used for resuming uploads)
  * This version of UA is not released on wiki.

DNAnexus Upload Agent 1.3.1 <support@dnanexus.com>, 2013-May-10
---------------------------------------------------------------
  * Bug fix: Libcurl silently added the header: "Content-Type: application/x-www-form-urlencoded"
    to all POST requests, but the new File API disallow sending "Content-Type" header with /UPLOAD call.

DNAnexus Upload Agent 1.3.0 <support@dnanexus.com>, 2013-May-10
---------------------------------------------------------------
  * [PTFM-7309] [PTFM-7314] Upload Agent now supports revised File API
  * resolveProject() function now caches previously returned values 
  * Some minor cosmetic improvements

DNAnexus Upload Agent 1.2.12 <support@dnanexus.com>, 2013-May-6
---------------------------------------------------------------
  * We are now explicitly setting LC_ALL=C in "linux-older-kernel" build
    (this allows the older-kernel build to function correctly on newer
    systems too)

DNAnexus Upload Agent 1.2.11 <support@dnanexus.com>, 2013-May-3
---------------------------------------------------------------
  * [PTFM-6706] Use c-ares's ares_gethostbyname() to resolve ip address explicitly on 