@@ -28,13 +28,12 @@
 build_dir=$1
 cd $build_dir
 pwd
-rm -rf curl-7.30.0.tar.bz2 curl-7.30.0
-wget "http://curl.haxx.se/download/curl-7.30.0.tar.bz2"
-tar -xjf curl-7.30.0.tar.bz2
+rm -rf curl-7.31.0.tar.bz2 curl-7.31.0
+wget "http://curl.haxx.se/download/curl-7.31.0.tar.bz2"
+tar -xjf curl-7.31.0.tar.bz2
 rm -f curl
-ln -s curl-7.30.0 curl
+ln -s curl-7.31.0 curl
 cd curl
-
 unamestr=`uname`
 if [[ "$unamestr" == 'Darwin' ]]; then
   # for installing on mac, use --enable-ares=/opt/local , instead of just --enable-ares
