@@ -1,3 +1,7 @@
+DNAnexus Upload Agent 1.4.2 <support@dnanexus.com>, 2013-Jul-8
+--------------------------------------------------------------
+  * Bump up the minimum libcurl version required to be 7.31.0
+
 DNAnexus Upload Agent 1.4.1 <support@dnanexus.com>, 2013-Jul-8
 --------------------------------------------------------------
   * A speculative fix for PTFM-8366 (reincarnation of PTFM-7251).
@@ -7,6 +11,7 @@ DNAnexus Upload Agent 1.4.1 <support@dnanexus.com>, 2013-Jul-8
     made for PTFM-8385)
   * Extraction of hostname is better now (deals with port info in url),
     also we identify ip addresses and do not resolve them explicitly (PTFM-8427)
+  * Not released on wiki
 
 DNAnexus Upload Agent 1.4.0 <support@dnanexus.com>, 2013-Jul-1
 --------------------------------------------------------------
